--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,10 @@ version: '3'
 services:
   docker-process-exporter:
     build: .
+    image: docker-process-exporter
+    container_name: docker-process-exporter
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./containerIgnore:/go/conf/containerIgnore
     ports:
       - 8088:8080
